--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=admin
 # MyBatis 설정
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
-mybatis.type-aliases-package=com.javasecurity.api.app
+mybatis.type-aliases-package=com.sungwon.api.app
 
 # Hibernate 자동 설정 비활성화 (JPA 대신 MyBatis 사용)
 spring.jpa.hibernate.ddl-auto=none
