--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ logging.level.org.mybatis.spring=DEBUG
 jwt.secretKey=mySuperSecureSecretKeyWith32Characters!
 jwt.accessToken.expiration=3600000
 jwt.refreshToken.expiration=604800000
-default.password=test
+default.password=TEST2
