--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ logging.level.org.mybatis=DEBUG
 logging.level.org.mybatis.spring=DEBUG
 
 jwt.secretKey=mySuperSecureSecretKeyWith32Characters!
-jwt.accessToken.expiration=3600000
+jwt.accessToken.expiration=60000
 jwt.refreshToken.expiration=604800000
 default.password=TEST2
